personal details alignment fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -147,7 +147,9 @@ main {
     .personal-details {
       display: flex;
       flex-direction: column;
-
+      @include mediaSm {
+        padding-left: 1rem;
+      }
       .dob,
       .phoneNo,
       .address,
@@ -175,6 +177,7 @@ main {
 
         @include mediaSm {
           flex-direction: column;
+          align-items: flex-start;
           margin-bottom: 24px;
         }
       }
